--- a/lib/l10n/app_lv.arb
+++ b/lib/l10n/app_lv.arb
@@ -1,9 +1,9 @@
 {
   "@@locale": "lv",
-    "homeContent": "Sākuma saturs",
-"calendarContent": "Kalendāra skats",
-"searchContent": "Meklēšanas skats",
-"profileContent": "Profila lapa",
+  "homeContent": "Sākuma saturs",
+  "calendarContent": "Kalendāra skats",
+  "searchContent": "Meklēšanas skats",
+  "profileContent": "Profila lapa",
   "login": "Pieslēgties",
   "signUp": "Reģistrēties",
   "email": "E-pasts",
@@ -27,6 +27,19 @@
   "location": "Atrašanās vieta",
   "leaguesParticipated": "Piedalītās līgas",
   "matches": "spēles",
-  "settings": "Iestatījumi"
-
+  "save": "Saglabāt",
+  "requiredField": "Šis lauks ir obligāts",
+  "name": "Vārds Uzvārds",
+  "city": "Pilsēta",
+  "country": "Valsts",
+  "logoutConfirm": "Vai tiešām vēlaties izrakstīties?",
+  "cancel": "Atcelt",
+  "confirm": "Jā",
+  "gender": "Dzimums",
+  "male": "Vīrietis",
+  "female": "Sieviete",
+  "other": "Cits",
+  "genderMale": "Vīrietis",
+  "genderFemale": "Sieviete",
+  "genderOthers": "Cits"
 }
